lib/chuchugrammar.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = function(b) {
            console.log("PROGRAM");
            b.name = "$main";
            b.params = [];
            return b;
          },
        peg$c1 = function(d, st) {
                  let declarations = [];
                  console.log("BLOCK");
                  console.log(st);
                  console.log("END ST");
                  // Liberación del switch little smell. Inicializamos arrays vacíos de cada tipo de declaración.
                  declarations["constantDeclaration"] = [];
                  declarations["varDeclaration"] = [];
                  declarations["functionDeclaration"] = [];
                  declarations["classDeclaration"] = [];
                  declarations["objectDeclaration"] = [];

                  d.map ((dec) => {
                    declarations[dec.type].push(dec.value); // dec --> declaration.  dec.value is the sentence of the declaration.
                  })

                  return {
                    type: 'Block',
                    constants: declarations["constantDeclaration"],
                    classes:   declarations["classDeclaration"],
                    variables: declarations["varDeclaration"],
                    object:    declarations["objectDeclaration"],
                    functions: declarations["functionDeclaration"],
                    main: st? st : []
                  };
              },
        peg$c2 = function(c) {
                        return {
                          type: "constantDeclaration",
                          value: c
                        }
                      },
        peg$c3 = function(v) {
                       return {
                         type: "varDeclaration",
                         value: v
                       }
                     },
        peg$c4 = function(f) {
                       return {
                         type: "functionDeclaration",
                         value: f
                       }
                     },
        peg$c5 = function(c) {
                       return {
                         type: "classDeclaration",
                         value: c
                       }
                     },
        peg$c6 = function(o) {
                       return {
                         type: "objectDeclaration",
                         value: o
                       }
                     },
        peg$c7 = function(id, n) {
                                console.log("constant declaration");
                                  return {
                                    id: id.value,
                                    location: id.location,
                                    value: n.value
                                  }
                                },
        peg$c8 = function(id) {
                            console.log("variable declaration");
                              return {
                                id: id.value,
                                location: id.location
                              }
                            },
        peg$c9 = function(id, p1, r, b) {
                      let params = p1? [p1] : [];
                      params = params.concat(r.map(([_, p]) => p));
                      console.log("Function declaration");

                      return {
                        type: 'Function',
                        name: id,
                        params: params,
                        nParams: params.size,
                        block: b
                      }
        /*
                return Object.assign({
                  type: 'Function',
                  name: id,
                  params: params,
                  nParams: params.size
                }, b);
        */
              },
        peg$c10 = function(id, cl) {
                      return {
                        type: "ObjectDeclaration",
                        id: id,
                        class: cl
                      }
                    },
        peg$c11 = function(id, d) {
                    let declarations = [];

                    declarations["constantDeclaration"] = [];
                    declarations["varDeclaration"]      = [];
                    declarations["functionDeclaration"] = [];
                    declarations["objectDeclaration"]   = [];
                    declarations["classDeclaration"]    = [];

                    d.map ((dec) => {
                      declarations[dec.type].push(dec.value);
                    })

                    return {
                      type: 'Class',
                      id: id,
                      constants: declarations["constantDeclaration"],
                      classes:   declarations["classDeclaration"],
                      variables: declarations["varDeclaration"],
                      objects:   declarations["objectDeclaration"],
                      functions: declarations["functionDeclaration"]
                    };
                  },
        peg$c12 = { type: "other", description: "name" },
        peg$c13 = function(s1, r) {
                     console.log("Compound sentence");
                     let t = [];
                     if (s1) t.push(s1);
                     return {
                       type: 'Compound', // Chrome supports destructuring
                       children: t.concat(r.map( ([_, st]) => st ))
                     };
                },
        peg$c14 = function(e, st, sf) {
                     return {
                       type: 'IfElse',
                       c:  e,
                       st: st,
                       sf: sf,
                     };
                   },
        peg$c15 = function(e, st) {
                     return {
                       type: 'If',
                       c:  e,
                       st: st
                     };
                   },
        peg$c16 = function(a, st) {
                     return { type: 'While', c: a, st: st };
                   },
        peg$c17 = function(n, st) {
                     return {
                       type: 'Iterate',
                       times: n,
                       st: st
                     }
               },
        peg$c18 = function(id, cases, defaul) {
                 return {
                   type: 'Switch',
                   id: id,
                   cases: cases,
                   defaul: defaul
                 }
               },
        peg$c19 = function(factor, factor2, n, sort) {
                 let options = [];
                 if (sort) {
                   if (n) {
                     options.push("inverse sort");
                   }
                   else {
                     options.push("sort");
                   }
                 }
                 return  {
                   type: "Put",
                   input: factor,
                   destination: factor2,
                   options: options
                 }
               },
        peg$c20 = function(a) {
                     return { type: 'Return', children: a? [a] : [] };
                   },
        peg$c21 = function(a) {
                 console.log("assign as sentence.");
                 return a;
                },
        peg$c22 = function(v) { return v; },
        peg$c23 = function(c) { return c; },
        peg$c24 = function(f) { return f; },
        peg$c25 = function(o) { return  o; },
        peg$c26 = function(i, func) {
                  return {
                      type: 'Assign',
                      left: i,
                      right: func
                    }
                  },
        peg$c27 = function(i, op, e) {
                 var right;

                 if (op) {
                    right = {
                       type: op,
                       left: i,
                       right: e
                     }
                 }
                 else {
                    right = e;
                 }
                 return {
                    type: 'Assign',
                    left: i,
                    right: right
                  };
              },
        peg$c28 = function(p1, r, b) {
                let params = p1? [p1] : [];
                params = params.concat(r.map(([_, p]) => p));

                return Object.assign({
                  type: 'AnonymFunction',
                  params: params,
                  nParams: params.size
                }, b);
              },
        peg$c29 = function(l, op, r) { return { type: op, left: l, right: r} },
        peg$c30 = function(left, right) {
                    return {
                      type: 'Concat',
                      left: left,
                      right: right
                    }
                  },
        peg$c31 = function(t, r) { return tree(t,r); },
        peg$c32 = function(f, r) { return tree(f,r); },
        peg$c33 = function(a1, a2) {
                  return {
                    type: 'Concat',
                    left: a1,
                    right: a2
                  }
                },
        peg$c34 = function(b, e) {
                return {
                  type: 'Pow',
                  base: b,
                  exp: e
                 }
               },
        peg$c35 = function(r, v) {
               return {
                 type: 'Sqrt',
                 root: r,
                 value: v
                }
              },
        peg$c36 = function(b, v) {
              return {
                type: 'Log',
                base: b,
                value: v
                }
              },
        peg$c37 = function(v, m) {
              return {
                type: 'Modulus',
                value: v,
                mod: m
                }
              },
        peg$c38 = function(f, a, r) {
                   let t = [];
                   if (a) t.push(a);
                   return {
                     type: 'Call',
                     func: f,
                     arguments: t.concat(r.map(([_, exp]) => exp))
                   }
                 },
        peg$c39 = function(t) { return t; },
        peg$c40 = function(elem, elemN) {
         let t = [];
         let nParams;
         if (elem) t.push(elem);
         return {
           type: 'Array',
           elements: t.concat(elemN.map(([_, exp]) => exp)),
           size: elemN.length + 1
         }
        },
        peg$c41 = function(id, inx) {
              return {
                type: 'ArrayElement',
                id: id,
                index: inx
              }
            },
        peg$c42 = /^[ \t\n\r]/,
        peg$c43 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c44 = "=",
        peg$c45 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c46 = function(op) { return op; },
        peg$c47 = /^[+\-]/,
        peg$c48 = { type: "class", value: "[+-]", description: "[+-]" },
        peg$c49 = /^[*\/]/,
        peg$c50 = { type: "class", value: "[*/]", description: "[*/]" },
        peg$c51 = "**",
        peg$c52 = { type: "literal", value: "**", description: "\"**\"" },
        peg$c53 = "//",
        peg$c54 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c55 = "!**",
        peg$c56 = { type: "literal", value: "!**", description: "\"!**\"" },
        peg$c57 = "!",
        peg$c58 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c59 = "%",
        peg$c60 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c61 = "(",
        peg$c62 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c63 = ")",
        peg$c64 = { type: "literal", value: ")", description: "\")\"" },
        peg$c65 = "{",
        peg$c66 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c67 = "}",
        peg$c68 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c69 = "[",
        peg$c70 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c71 = "]",
        peg$c72 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c73 = ";",
        peg$c74 = { type: "literal", value: ";", description: "\";\"" },
        peg$c75 = ",",
        peg$c76 = { type: "literal", value: ",", description: "\",\"" },
        peg$c77 = "==",
        peg$c78 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c79 = "!=",
        peg$c80 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c81 = "<=",
        peg$c82 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c83 = ">=",
        peg$c84 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c85 = "<",
        peg$c86 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c87 = ">",
        peg$c88 = { type: "literal", value: ">", description: "\">\"" },
        peg$c89 = function(op) {
                       return op;
                    },
        peg$c90 = "if",
        peg$c91 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c92 = "then",
        peg$c93 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c94 = "else",
        peg$c95 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c96 = "while",
        peg$c97 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c98 = "iterate",
        peg$c99 = { type: "literal", value: "iterate", description: "\"iterate\"" },
        peg$c100 = "times",
        peg$c101 = { type: "literal", value: "times", description: "\"times\"" },
        peg$c102 = "put",
        peg$c103 = { type: "literal", value: "put", description: "\"put\"" },
        peg$c104 = "into",
        peg$c105 = { type: "literal", value: "into", description: "\"into\"" },
        peg$c106 = "sorted",
        peg$c107 = { type: "literal", value: "sorted", description: "\"sorted\"" },
        peg$c108 = "class",
        peg$c109 = { type: "literal", value: "class", description: "\"class\"" },
        peg$c110 = "is",
        peg$c111 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c112 = "object",
        peg$c113 = { type: "literal", value: "object", description: "\"object\"" },
        peg$c114 = "as",
        peg$c115 = { type: "literal", value: "as", description: "\"as\"" },
        peg$c116 = "concat",
        peg$c117 = { type: "literal", value: "concat", description: "\"concat\"" },
        peg$c118 = "switch",
        peg$c119 = { type: "literal", value: "switch", description: "\"switch\"" },
        peg$c120 = "case",
        peg$c121 = { type: "literal", value: "case", description: "\"case\"" },
        peg$c122 = "break",
        peg$c123 = { type: "literal", value: "break", description: "\"break\"" },
        peg$c124 = "default",
        peg$c125 = { type: "literal", value: "default", description: "\"default\"" },
        peg$c126 = "do",
        peg$c127 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c128 = "return",
        peg$c129 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c130 = "var",
        peg$c131 = { type: "literal", value: "var", description: "\"var\"" },
        peg$c132 = "const",
        peg$c133 = { type: "literal", value: "const", description: "\"const\"" },
        peg$c134 = "function",
        peg$c135 = { type: "literal", value: "function", description: "\"function\"" },
        peg$c136 = /^[a-zA-Z_]/,
        peg$c137 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c138 = /^[a-zA-Z_0-9]/,
        peg$c139 = { type: "class", value: "[a-zA-Z_0-9]", description: "[a-zA-Z_0-9]" },
        peg$c140 = function(id) {
                      console.log("NEW ID --> " + id);
                      return { type: 'ID', value: id, location: location() };
                    },
        peg$c141 = /^[0-9]/,
        peg$c142 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c143 = function(digits) {
                      return { type: 'NUM', value: parseInt(digits, 10) };
                    },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseblock();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseblock() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsedeclaration();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsedeclaration();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsest();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsedeclaration() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseconstantDeclaration();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsevarDeclaration();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsefunctionDeclaration();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseclassDeclaration();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c5(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseobjectDeclaration();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s1);
              }
              s0 = s1;
            }
          }
        }
      }

      return s0;
    }

    function peg$parseconstantDeclaration() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseCONST();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseASSIGN();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNUMBER();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseSC();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c7(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsevarDeclaration() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseVAR();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseSC();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefunctionDeclaration() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parseFUNCTION();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLEFTPAR();
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            peg$silentFails++;
            s5 = peg$parseCOMMA();
            peg$silentFails--;
            if (s5 === peg$FAILED) {
              s4 = void 0;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseID();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$currPos;
                s8 = peg$parseCOMMA();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseID();
                  if (s9 !== peg$FAILED) {
                    s8 = [s8, s9];
                    s7 = s8;
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$currPos;
                  s8 = peg$parseCOMMA();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseID();
                    if (s9 !== peg$FAILED) {
                      s8 = [s8, s9];
                      s7 = s8;
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseRIGHTPAR();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parsest();
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c9(s2, s5, s6, s8);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseobjectDeclaration() {
      var s0, s1, s2, s3, s4, s5;
